--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     />
     <title>Landing Page</title>
     <link
+      rel="icon"
+      type="image/x-icon"
+      href="src/styles/img/favicon/shop_106574.ico"
+    />
+    <link
       rel="stylesheet"
       href="src/styles/main.scss"
     />
@@ -16,7 +21,297 @@
       defer
     ></script>
   </head>
-  <body>
-    <h1>Landing Page</h1>
+
+  <body class="pagina">
+    <header class="cabecalho">
+      <div class="cabecalho__topo">
+        <a
+          href="#"
+          class="cabecalho__topo-logo"
+        >
+          <img
+            src="src/styles/img/icon/logo-bang.png"
+            alt="logo nothing"
+            class="cabecalho__topo-logo-img"
+          />
+        </a>
+        <div class="cabecalho__topo-esquerda">
+          <a
+            href="tel:+1 234 5555-55-55"
+            class="icone icone--telefone"
+          ></a>
+          <span class="cabecalho__topo-esquerda-tel">+1 234 5555-55-55</span>
+
+          <a
+            href="#menu"
+            class="icone icone--menu"
+          ></a>
+        </div>
+      </div>
+      <h1 class="cabecalho__titulo">
+        Your senses.
+        <br />
+        Set free.
+      </h1>
+    </header>
+
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="menu__topo">
+        <a
+          href="#"
+          class="cabecalho__topo-logo"
+        >
+          <img
+            src="src/styles/img/icon/logo-bang.png"
+            alt="logo nothing"
+            class="cabecalho__topo-logo-img"
+          />
+        </a>
+        <a
+          href="#"
+          class="icone icone--fechar"
+        ></a>
+      </div>
+      <div class="menu__conteudo">
+        <nav class="navegacao menu__navegacao">
+          <ul class="navegacao__lista">
+            <li class="navegacao__item">
+              <a
+                class="navegacao__link"
+                href="#recommended"
+              >
+                Recommended
+              </a>
+            </li>
+            <li class="navegacao__item">
+              <a
+                class="navegacao__link"
+                href="#category"
+              >
+                Category
+              </a>
+            </li>
+            <li class="navegacao__item">
+              <a
+                class="navegacao__link"
+                href="#about"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="navegacao__item">
+              <a
+                class="navegacao__link"
+                href="#contact"
+              >
+                Contact Us
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <a
+          href="tel:+1 234 5555-55-55"
+          class="navegacao__link menu__telefone"
+        >
+          +1 234 5555-55-55
+        </a>
+        <a
+          href="tel:+1 234 5555-55-55"
+          class="navegacao__link menu__ligar-pedido"
+        >
+          Call to order
+        </a>
+      </div>
+    </aside>
+
+    <main class="principal">
+      <div
+        class="recomendados"
+        id="recommended"
+      >
+        <h1 class="recomendados-titulo">Recommended</h1>
+
+        <div class="recomendados__produto">
+          <img
+            src="src/styles/img/recomended/Image-1.png"
+            alt="bag-img-1"
+            class="imagem-tamanho recomendados__produto-img"
+          />
+          <h3 class="recomendados__produto-titulo">BEOSOUND A5</h3>
+          <p class="recomendados__produto-descricao">
+            Huge sound anywhere – in the home or outdoors. Beosound A5 is a
+            Wi-Fi and Bluetooth speaker with long-lasting battery and wireless
+            charging built in.
+          </p>
+          <p class="recomendados__produto-preco">$ 1299.00</p>
+        </div>
+        <div class="recomendados__produto">
+          <img
+            src="src/styles/img/recomended/Image-2.png"
+            alt="img-2"
+            class="imagem-tamanho recomendados__produto-img"
+          />
+          <h3 class="recomendados__produto-titulo">BEOPLAY HX</h3>
+          <p class="recomendados__produto-descricao">
+            Wireless noise-cancelling headphones. Listen in comfort whether
+            you're on a call, working from home or taking a moment for yourself.
+          </p>
+          <p class="recomendados__produto-preco">$ 499.00</p>
+        </div>
+        <div class="recomendados__produto">
+          <img
+            src="src/styles/img/recomended/Image-3.png"
+            alt="img-3"
+            class="imagem-tamanho recomendados__produto-img"
+          />
+          <h3 class="recomendados__produto-titulo">BEOSOUND THEATRE</h3>
+          <p class="recomendados__produto-descricao">
+            Four patent-pending acoustic innovations in one sleek soundbar
+            envelop you in sound from every angle. Made to fit any TV, and last
+            for generations.
+          </p>
+          <p class="recomendados__produto-preco">$ 3199.00</p>
+        </div>
+      </div>
+
+      <div
+        class="categoria"
+        id="category"
+      >
+        <h1 class="categoria-titulo">
+          Sound. Vision.
+          <br />
+          It's your pick.
+        </h1>
+        <div class="categoria__produto">
+          <img
+            src="src/styles/img/categories/portable-speaker-1.png"
+            alt="portable-speaker-1"
+            class="imagem-tamanho categoria__produto-img"
+          />
+          <img
+            src="src/styles/img/categories/portable-speaker-2.png"
+            alt="portable-speaker-2"
+            class="imagem-tamanho categoria__produto-img"
+          />
+        </div>
+        <h3 class="categoria-nome">Portable speakers</h3>
+      </div>
+      <div class="categoria">
+        <div class="categoria__produto">
+          <img
+            src="src/styles/img/categories/earphones-1.png"
+            alt="earphones-1"
+            class="imagem-tamanho categoria__produto-img"
+          />
+          <img
+            src="src/styles/img/categories/earphones-2.png"
+            alt="earphones-2"
+            class="imagem-tamanho categoria__produto-img"
+          />
+        </div>
+        <h3 class="categoria-nome">Earphones</h3>
+      </div>
+      <div class="categoria">
+        <div class="categoria__produto">
+          <img
+            src="src/styles/img/categories/smarthome-1.png"
+            alt="smarthome-1"
+            class="imagem-tamanho categoria__produto-img"
+          />
+          <img
+            src="src/styles/img/categories/smarthome-2.png"
+            alt="smarthome-22"
+            class="imagem-tamanho categoria__produto-img"
+          />
+        </div>
+        <h3 class="categoria-nome">Smart home</h3>
+      </div>
+
+      <button class="ver-todos">View All</button>
+    </main>
+
+    <img
+      src="src/styles/img/background/background-mid.png"
+      alt="imagen de background da section about-us"
+      class="sobre-imagem"
+    />
+    <section
+      class="sobre"
+      id="about"
+    >
+      <h1 class="sobre-titulo">Timeless, for 50 years and counting</h1>
+      <p class="sobre-descricao">
+        Bang & Olufsen is expanding its Recreated Classics Program with the
+        launch of Beosystems – a limited edition music system that transcends
+        time by bridging the gap between one of our iconic designs from 1972 and
+        today's cutting-edge digital technology.
+      </p>
+    </section>
+
+    <footer
+      class="contato"
+      id="contact"
+    >
+      <h1 class="contato-titulo">Contact Us</h1>
+
+      <form
+        class="contato__formulario"
+        onsubmit="this.reset(); return false;"
+      >
+        <input
+          type="text"
+          placeholder="Type your name"
+          class="contato-entrada"
+          required
+        />
+        <input
+          type="email"
+          placeholder="fulaninho@gmail.com"
+          class="contato-entrada"
+          required
+        />
+        <textarea
+          placeholder="Write a message for us..."
+          class="contato-area-texto"
+          required
+        ></textarea>
+        <button class="contato-botao">Send</button>
+      </form>
+
+      <aside class="contato__info">
+        <p class="informacao-titulo">Phone</p>
+        <a
+          href="tel:+1 234 5555-55-55"
+          class="link-padrao informacao-descricao"
+        >
+          +1 234 5555-55-55
+        </a>
+
+        <p class="informacao-titulo">Email</p>
+        <a
+          href="mailto:hello@bang&olufsen.com"
+          class="link-padrao informacao-descricao"
+        >
+          hello@bang&olufsen.com
+        </a>
+
+        <p class="informacao-titulo">Address</p>
+        <a
+          href="https://www.google.com/maps/place/Juazeiro+do+Norte+-+CE/@-7.1793222,-39.2796439,12z/data=!3m1!4b1!4m6!3m5!1s0x7a178a253bcc53d:0xcd11c8869d88a8d!8m2!3d-7.2291097!4d-39.3124589!16zL20vMDhmcGd0?entry=ttu&g_ep=EgoyMDI2MDEyNS4wIKXMDSoASAFQAw%3D%3D"
+          target="_blank"
+          class="link-padrao informacao-descricao"
+        >
+          400 first ave.
+          <br />
+          suite 700
+          <br />
+          Minneapolis, MN 55401
+        </a>
+      </aside>
+    </footer>
   </body>
 </html>
